--- a/assignments/weathersite/css/small-8.css
+++ b/assignments/weathersite/css/small-8.css
@@ -6,6 +6,7 @@
 header {
     display: flex;
     justify-content: center;
+    border-radius: 3em;
 }
 
 header img {
@@ -13,7 +14,7 @@ header img {
     align-self: center;
 }
 
- 
+
 title {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 1rem;
@@ -24,7 +25,7 @@ header h1 {
         /* x.xrem  (rem is a unit of measure) */
     ;
     color: white;
-        /* #xxxxxx */
+    /* #xxxxxx */
     ;
     text-align: center;
     padding: 15px;
@@ -36,10 +37,7 @@ article h1 {
     font-size: 2em;
     text-align: center;
 }
-article p{
-    font-size: 1em;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
+
 
 section h1 {
     padding: 15px;
@@ -92,7 +90,7 @@ footer {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: center;
     background-color: rgb(72, 128, 72);
-        /* */
+    /* */
     ;
     color: black;
     border: none;
@@ -101,7 +99,7 @@ footer {
 nav {
     background-color: rgb(20, 33, 148);
     margin: 0;
-       
+
 
 }
 
@@ -130,7 +128,7 @@ nav ul.hide {
 }
 
 nav li.active {
-    background-color:rgb(72, 128, 72);
+    background-color: rgb(72, 128, 72);
     color: white;
 }
 
@@ -161,12 +159,15 @@ section.hero div {
     left: 15px;
     background-color: rgba(72, 128, 72, 0.6);
 
-} 
+}
+
 main.div p {
-    padding-top: 200px; padding-bottom: 200px;
+    padding-top: 200px;
+    padding-bottom: 200px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 2.5em;
 }
+
 main.img {
     padding: 15px 0 0 15px;
 }
@@ -194,6 +195,7 @@ section.forecast {
 section.forecast img {
     max-width: auto;
 }
+
 section.forecast th {
     font-size: 1.25em;
 }
@@ -202,11 +204,15 @@ article img {
     max-width: 50%;
     padding: 20px;
 }
+
 article p {
     max-width: 700px;
     margin: auto;
-      
+    padding-bottom: 20px;
+    font-size: 1em;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
 div.gallery {
     display: grid;
     grid-template-columns: (1fr 100%);
@@ -214,9 +220,9 @@ div.gallery {
     grid-gap: 50px;
     margin: auto;
     align-items: center;
-    }
+}
 
-div.address  {
+div.address {
     align-self: auto;
     font-size: 1.25em;
     color: white;
@@ -244,52 +250,88 @@ footer {
     margin-top: 0px;
     border-radius: 3em;
 }
+
 /*Home page*/
 
 section.home {
     display: grid;
-    grid-gap: 15px;
+    grid-gap: 25px;
     margin-top: 50px;
     margin-bottom: 50px;
+    font-size: 1.25em;
+    color:white;
+}
+section.home article p {
+    padding: 10px;
+    font-size: 1em;
+    color: navy;
+}
+section.home h2 {
+    font-size: 1.75em;
 }
 
 section.home img {
-    max-width: 100%;
+    max-width: 80%;
+    margin-top: 15px;
+}
+div.homepage img {
     margin-top: 30px;
-}
-section.home article:nth-of-type(1){
-    order:3;  
-}
-section.home article:nth-of-type(2){
-    order:1;  
-}
-section.home article:nth-of-type(3){
-    order:2;  
+    max-width: 75%;
+   }
+section.home main img {
+    max-width: 50%;
+    padding: 25px;
+}  
+
+section.home main p {
+    font-size: 2em;
+    color: white;
+    margin-bottom: 25px;
+    }
+
+section.home article:nth-of-type(1) {
+    order: 3;
 }
 
-.events ul{
+section.home article:nth-of-type(2) {
+    order: 1;
+}
+
+section.home article:nth-of-type(3) {
+    order: 2;
+}
+
+/*Current Events*/
+
+.events ul {
     list-style-type: none;
     padding: 0;
 
 }
+
 .events {
-     max-width: 400px;
+    max-width: 400px;
     margin: 20px auto;
     padding-bottom: 20px;
-    background-color:  rgba(72, 128, 72, 0.6);
+    background-color: rgba(72, 128, 72, 0.6);
     border-radius: 3em;
-    
+
 }
+
 .events h2 {
     color: white;
     font-size: 3em;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 
 }
+
 .events img {
-    padding-bottom: 20px; padding-top: 20px ;
+    padding-bottom: 20px;
+    padding-top: 20px;
 }
+
 .events div {
     font-size: 1.5em;
     padding-bottom: 20px;
+    color: white;
 }
