--- a/assignments/weathersite/css/small-8.css
+++ b/assignments/weathersite/css/small-8.css
@@ -133,7 +133,8 @@ nav li.active {
 }
 
 li a:hover {
-    background-color: gray;
+    background-color: rgb(221, 201, 174);
+    color: black;
 }
 
 main {
@@ -230,6 +231,7 @@ div.address {
 
 div.social img {
     max-width: 35px;
+    padding-top: 15px;
 
 }
 
@@ -288,6 +290,11 @@ section.home main p {
     color: white;
     margin-bottom: 25px;
     }
+p.great  {
+    font-size: 2em;
+    color: white;
+    padding-bottom: 50px;
+}
 
 section.home article:nth-of-type(1) {
     order: 3;
