--- a/assignments/weathersite/css/small-8.css
+++ b/assignments/weathersite/css/small-8.css
@@ -1,12 +1,11 @@
 * {
     margin: 0;
-    box-sizing: none;
 }
 
 header {
     display: flex;
     justify-content: center;
-    border-radius: 3em;
+    border-radius: 3px;
 }
 
 header img {
@@ -14,19 +13,14 @@ header img {
     align-self: center;
 }
 
-
 title {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Copse', serif;
     font-size: 1rem;
 }
 
 header h1 {
-    font-size: 1.5em
-        /* x.xrem  (rem is a unit of measure) */
-    ;
+    font-size: 3em;
     color: white;
-    /* #xxxxxx */
-    ;
     text-align: center;
     padding: 15px;
     margin: 0;
@@ -42,23 +36,20 @@ article h1 {
 section h1 {
     padding: 15px;
     text-align: center;
-    font-size: 3em;
+    font-size: 2em;
     color: white;
 }
 
 h2 {
-    font-size: 1rem
-        /* x.xrem */
-    ;
+    font-size: 1em;        
     text-align: center;
-    border-bottom: 1px solid #bbb;
     padding: 15px;
-    color: white;
+    color: rgb(219, 219, 74);
 }
 
 h3 {
     text-align: center;
-    font-size: 1.25rem;
+    font-size: 1.5em;
     color: #000000;
     padding: 10px 20px 20px 20px;
     margin: 0;
@@ -71,36 +62,28 @@ img.myphoto {
 body {
     font-size: 16px;
     line-height: 1em;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    background-color: rgb(88, 122, 155, 0.3)
-        /* */
-    ;
-    color: #000000
-        /* #xxxxxx */
-    ;
+    font-family: 'Copse', serif;
+    background-color: rgba(88, 122, 155, 0.3);
+     color: #000000;
     text-align: center;
 }
 
 header,
 main,
 footer {
-    font-size: 1rem;
-    line-height: 1rem;
+    font-size: 1em;
+    line-height: 1em;
     margin: 10px auto;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Copse', serif;
     text-align: center;
     background-color: rgb(72, 128, 72);
-    /* */
-    ;
-    color: black;
+       color: black;
     border: none;
 }
 
 nav {
     background-color: rgb(20, 33, 148);
     margin: 0;
-
-
 }
 
 nav ul {
@@ -129,11 +112,11 @@ nav ul.hide {
 
 nav li.active {
     background-color: rgb(72, 128, 72);
-    color: white;
+    color: rgb(247, 247, 164);
 }
 
 li a:hover {
-    background-color: rgb(221, 201, 174);
+    background-color: rgb(247, 247, 164);
     color: black;
 }
 
@@ -159,13 +142,13 @@ section.hero div {
     top: 75px;
     left: 15px;
     background-color: rgba(72, 128, 72, 0.6);
-
+    border-radius: 2px;
 }
 
 main.div p {
     padding-top: 200px;
     padding-bottom: 200px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Copse', serif;
     font-size: 2.5em;
 }
 
@@ -211,22 +194,40 @@ article p {
     margin: auto;
     padding-bottom: 20px;
     font-size: 1em;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Copse', serif;
 }
 
 div.gallery {
     display: grid;
     grid-template-columns: (1fr 100%);
-    grid-template-rows: 200px;
-    grid-gap: 50px;
+    grid-gap: 15px;
     margin: auto;
     align-items: center;
+
+}
+
+div.gallery figure {
+    justify-self: center;
+    padding-bottom: 20px;
+}
+
+div.gallery img {
+    padding: 0;
+}
+
+figcaption {
+    color: white;
+    font-size: 1.5em;
 }
 
 div.address {
     align-self: auto;
     font-size: 1.25em;
     color: white;
+}
+
+div.address p {
+    padding: 5px;
 }
 
 div.social img {
@@ -250,7 +251,7 @@ footer {
     padding: 20px;
     max-width: 800px;
     margin-top: 0px;
-    border-radius: 3em;
+    border-radius: 3px;
 }
 
 /*Home page*/
@@ -261,13 +262,15 @@ section.home {
     margin-top: 50px;
     margin-bottom: 50px;
     font-size: 1.25em;
-    color:white;
+    color: white;
 }
+
 section.home article p {
     padding: 10px;
     font-size: 1em;
     color: navy;
 }
+
 section.home h2 {
     font-size: 1.75em;
 }
@@ -276,21 +279,25 @@ section.home img {
     max-width: 80%;
     margin-top: 15px;
 }
+
 div.homepage img {
     margin-top: 30px;
     max-width: 75%;
-   }
+    padding: 0px;
+}
+
 section.home main img {
     max-width: 50%;
     padding: 25px;
-}  
+}
 
 section.home main p {
     font-size: 2em;
     color: white;
     margin-bottom: 25px;
-    }
-p.great  {
+}
+
+p.great {
     font-size: 2em;
     color: white;
     padding-bottom: 50px;
@@ -313,7 +320,10 @@ section.home article:nth-of-type(3) {
 .events ul {
     list-style-type: none;
     padding: 0;
+}
 
+.events li {
+    padding: 10px;
 }
 
 .events {
@@ -328,8 +338,7 @@ section.home article:nth-of-type(3) {
 .events h2 {
     color: white;
     font-size: 3em;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
+    font-family: 'Copse', serif;
 }
 
 .events img {
@@ -342,13 +351,144 @@ section.home article:nth-of-type(3) {
     padding-bottom: 20px;
     color: white;
 }
+
 /* Thank you page */
 
-main div p{
-    padding-bottom: 100px; padding-top: 75px;
+main div p {
+    padding-bottom: 100px;
+    padding-top: 75px;
     color: White;
     font-size: 3em;
 }
+
 main div img {
     padding-bottom: 50px;
+}
+
+/*Storm Center*/
+
+.stormy h1 {
+    color:Navy;
+    font-size: 2.5em;
+    font-family: 'Copse', serif;
+}
+.stormy p {
+    font-size: 1.5em;
+}
+form {
+    text-align: left;
+    margin-left: 75px;
+    padding: 20px;
+}
+
+form h3 {
+    font-size: 20px;
+    font-family: 'Copse', serif;
+}
+
+input {
+    box-sizing: border-box;
+}
+
+input[type=text] {
+    width: 50%;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border-radius: 4px;
+}
+
+input[type=email] {
+    width: 40%;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border-radius: 4px;
+}
+
+input[type=tel] {
+    margin: 8px 0;
+    border-radius: 4px;
+}
+
+input[type=number] {
+    margin: 8px 0;
+    border-radius: 4px;
+}
+
+input[type=date] {
+    margin: 8px 0;
+    border-radius: 4px;
+    text-align: center;
+}
+
+input[list=weather] {
+    margin: 8px 0;
+    border-radius: 4px;
+}
+
+.slidecontainer {
+    width: 100%;
+}
+
+.slider {
+    -webkit-appearance: none;
+    width: 50%;
+    height: 25px;
+    background: white;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+    border-radius: 4px;
+    margin: 8px 0;
+}
+
+.slider:hover {
+    opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    background: rgb(72, 128, 72);
+    cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    background: #4CAF50;
+    cursor: pointer;
+}
+
+#ratingvalue {
+    padding: 10px;
+}
+
+select[name=stormregion] {
+    margin: 8px 0;
+    border-radius: 4px;
+}
+
+#text {
+    margin: 8px;
+}
+
+input[type=radio] {
+    margin: 5px 0;
+
+}
+
+textarea {
+    margin: 8px 0;
+    border-radius: 4px;
+    width: 100%;
+}
+
+button {
+    border-radius: 4px;
+    background-color: rgb(72, 128, 72);
+    color: white;
+    padding: 10px;
 }
