--- a/assignments/weathersite/css/large-8.css
+++ b/assignments/weathersite/css/large-8.css
@@ -25,8 +25,11 @@
   }
   nav ul.hide {
     display: inline-flex;
-  }
+  } 
   
+header h1 {
+  font-size: 3em;
+}
   section.hero {
     margin-bottom: 35px;
   }
