--- a/assignments/weathersite/css/small-8.css
+++ b/assignments/weathersite/css/small-8.css
@@ -200,7 +200,7 @@ article p {
 
 div.gallery {
     display: grid;
-    grid-template-columns: repeat(1 1fr);
+    grid-template-columns: repeat(1, 1fr);
     grid-gap: 15px;
     margin: auto;
     align-items: center;
