--- a/assignments/weathersite/css/small-8.css
+++ b/assignments/weathersite/css/small-8.css
@@ -214,12 +214,13 @@ div.gallery figure {
 
 div.gallery img {
     padding: 0;
+    border-radius: 3px;
 }
 
 figcaption {
     color: white;
     font-size: 1.5em;
-    padding-top: 5px;
+    padding-top: 15px;
 }
 
 div.address {
